--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Plombier Urgence 66 – Intervention 24h/24</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Plombier en urgence dans les Pyrénées-Orientales (66). Intervention rapide 24h/24 et 7j/7. Appel immédiat.">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Plombier Urgence 66 | monplombiercatalans.fr</title>
+  <meta name="description" content="Plombier urgence 66 (Pyrénées-Orientales). Intervention 24h/24 7j/7. Appel immédiat. Devis rapide." />
+  <meta name="theme-color" content="#C8102E" />
 
-  <!-- Google Ads -->
+  <!-- Google Ads (remplace le CONVERSION_LABEL par ton vrai label) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-169744"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -14,66 +15,178 @@
     gtag('js', new Date());
     gtag('config', 'AW-169744');
 
-    function gtag_report_conversion(url) {
-      var callback = function () {
-        if (typeof(url) !== 'undefined') window.location = url;
-      };
-      gtag('event', 'conversion', {
-        'send_to': 'AW-169744/CONVERSION_LABEL',
-        'event_callback': callback
-      });
-      return false;
+    // Conversion "Appel" (si tu veux rediriger vers tel:, laisse url undefined)
+    function gtag_report_call_conversion() {
+      try {
+        gtag('event', 'conversion', { 'send_to': 'AW-169744/CONVERSION_LABEL_CALL' });
+      } catch(e) {}
+      return true;
+    }
+
+    // Conversion "Formulaire"
+    function gtag_report_form_conversion() {
+      try {
+        gtag('event', 'conversion', { 'send_to': 'AW-169744/CONVERSION_LABEL_FORM' });
+      } catch(e) {}
+      return true;
     }
   </script>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-
-<header class="hero">
-  <h1>Plombier Urgence 66</h1>
-  <p>Intervention rapide 24h/24 et 7j/7 dans tout le département des Pyrénées-Orientales</p>
-
-  <div class="cta">
-    <a href="tel:+33600000000" class="btn btn-call" onclick="gtag_report_conversion()">📞 Appeler maintenant</a>
-    <a href="#devis" class="btn btn-devis">📝 Devis immédiat</a>
+  <!-- Top bar -->
+  <div class="topbar">
+    <div class="wrap topbar__inner">
+      <div class="topbar__left">
+        <span class="badge">Urgence 24/7</span>
+        <span class="topbar__txt">Pyrénées-Orientales (66) • Déplacement rapide</span>
+      </div>
+      <a class="topbar__phone" href="tel:+33600000000" onclick="gtag_report_call_conversion()">
+        📞 +33 6 00 00 00 00
+      </a>
+    </div>
   </div>
-</header>
 
-<main class="container">
+  <!-- Hero -->
+  <header class="hero">
+    <div class="wrap hero__grid">
+      <div class="hero__content">
+        <h1>Plombier Urgence 66<br><span class="accent">Intervention rapide 24h/24 – 7j/7</span></h1>
+        <p class="hero__sub">
+          Fuite d’eau, WC bouché, débouchage, chauffe-eau…<br>
+          Intervention sur <strong>Perpignan</strong>, <strong>Canet</strong>, <strong>Argelès</strong>, <strong>Saint-Cyprien</strong> et tout le 66.
+        </p>
 
-  <section class="card">
-    <h2>Interventions rapides dans le 66</h2>
-    <p>
-      Débouchage, fuite d’eau, WC bouché, chauffe-eau, robinetterie.
-      Intervention sur Perpignan, Canet-en-Roussillon, Argelès-sur-Mer,
-      Saint-Cyprien et tout le département 66.
-    </p>
-  </section>
+        <div class="hero__cta">
+          <a class="btn btn--call" href="tel:+33600000000" onclick="gtag_report_call_conversion()">
+            📞 Appeler maintenant
+          </a>
+          <a class="btn btn--quote" href="#devis">
+            📝 Devis immédiat
+          </a>
+        </div>
 
-  <section class="card" id="devis">
-    <h2>Demande de devis – Rappel rapide</h2>
+        <ul class="trust">
+          <li>✅ Devis clair</li>
+          <li>✅ Intervention rapide</li>
+          <li>✅ 24/7</li>
+        </ul>
+      </div>
 
-    <form id="leadForm">
-      <input type="text" name="name" placeholder="Votre nom" required>
-      <input type="tel" name="phone" placeholder="Votre téléphone" required>
-      <textarea name="message" placeholder="Décrivez votre problème" required></textarea>
+      <!-- Form -->
+      <aside class="card" id="devis" aria-label="Formulaire de devis plomberie">
+        <h2>Rappel / Devis rapide</h2>
+        <p class="muted">Réponse rapide. Si urgence : <a href="tel:+33600000000" onclick="gtag_report_call_conversion()">appelez</a>.</p>
 
-      <button type="submit" class="btn btn-devis">Envoyer la demande</button>
-    </form>
+        <form id="leadForm" class="form">
+          <label>
+            Nom
+            <input name="name" type="text" autocomplete="name" required placeholder="Votre nom" />
+          </label>
 
-    <p id="formStatus"></p>
-  </section>
+          <label>
+            Téléphone
+            <input name="phone" type="tel" autocomplete="tel" required placeholder="06 12 34 56 78" />
+          </label>
 
-</main>
+          <label>
+            Votre besoin
+            <textarea name="message" rows="4" required placeholder="Ex : fuite sous évier, WC bouché, débouchage..."></textarea>
+          </label>
 
-<footer class="footer">
-  <a href="https://hydrodebouchage.fr/privacy-policy/" target="_blank">CGV</a>
-  <a href="https://hydrodebouchage.fr/mentions-legales/" target="_blank">Mention légales</a>
-  <a href="https://hydrodebouchage.fr/contact-plombier/" target="_blank">Nos partenaires</a>
-</footer>
+          <button class="btn btn--submit" type="submit">
+            Envoyer la demande
+          </button>
 
-<script src="script.js"></script>
+          <p id="formStatus" class="status" role="status" aria-live="polite"></p>
+
+          <p class="fineprint">
+            En envoyant, vous acceptez d’être rappelé. Données utilisées uniquement pour vous recontacter.
+          </p>
+        </form>
+      </aside>
+    </div>
+  </header>
+
+  <!-- Mini sections (courtes) -->
+  <main class="wrap">
+    <section class="mini">
+      <div class="mini__item">
+        <h3>🚨 Urgence fuite / dégât des eaux</h3>
+        <p>Diagnostic rapide + réparation. Intervention possible en soirée et week-end.</p>
+      </div>
+      <div class="mini__item">
+        <h3>🚽 WC / Évier bouché</h3>
+        <p>Débouchage, inspection, remise en service. Intervention propre.</p>
+      </div>
+      <div class="mini__item">
+        <h3>🔥 Chauffe-eau</h3>
+        <p>Panne, fuite, groupe de sécurité, remplacement selon besoin.</p>
+      </div>
+    </section>
+
+    <!-- Avis tout en bas -->
+    <section class="reviews" id="avis">
+      <div class="reviews__head">
+        <h2>Avis clients</h2>
+        <p class="muted">Exemples d’avis (à personnaliser avec tes vrais retours).</p>
+      </div>
+
+      <div class="reviews__grid">
+        <article class="review">
+          <div class="review__top">
+            <strong>Claire P.</strong>
+            <span class="stars" aria-label="5 étoiles">★★★★★</span>
+          </div>
+          <p>Intervention très rapide sur Perpignan, fuite réparée proprement. Merci !</p>
+        </article>
+
+        <article class="review">
+          <div class="review__top">
+            <strong>Marc D.</strong>
+            <span class="stars" aria-label="5 étoiles">★★★★★</span>
+          </div>
+          <p>WC bouché un dimanche, arrivé vite et efficace. Je recommande.</p>
+        </article>
+
+        <article class="review">
+          <div class="review__top">
+            <strong>Sonia R.</strong>
+            <span class="stars" aria-label="5 étoiles">★★★★★</span>
+          </div>
+          <p>Devis clair au téléphone, intervention nickel. Très pro.</p>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrap footer__inner">
+      <div class="footer__brand">
+        <div class="flag" aria-hidden="true"></div>
+        <div>
+          <strong>monplombiercatalans.fr</strong><br>
+          <span class="muted">Plombier urgence 66 • 24/7</span>
+        </div>
+      </div>
+
+      <div class="footer__links">
+        <a href="https://hydrodebouchage.fr/privacy-policy/" target="_blank" rel="noopener">CGV</a>
+        <a href="https://hydrodebouchage.fr/mentions-legales/" target="_blank" rel="noopener">Mentions légales</a>
+        <a href="https://hydrodebouchage.fr/contact-plombier/" target="_blank" rel="noopener">Nos partenaires</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Sticky mobile CTA -->
+  <div class="sticky">
+    <a class="sticky__call" href="tel:+33600000000" onclick="gtag_report_call_conversion()">📞 Appeler</a>
+    <a class="sticky__quote" href="#devis">📝 Devis</a>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
