--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Plombier urgence 66 (Pyrénées-Orientales). Intervention 24h/24 7j/7. Appel immédiat. Devis rapide." />
   <meta name="theme-color" content="#C8102E" />
 
-  <!-- Google Ads (remplace le CONVERSION_LABEL par ton vrai label) -->
+  <!-- Google Ads (remplace les CONVERSION_LABEL par tes vrais labels) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-169744"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -15,24 +15,16 @@
     gtag('js', new Date());
     gtag('config', 'AW-169744');
 
-    // Conversion "Appel" (si tu veux rediriger vers tel:, laisse url undefined)
     function gtag_report_call_conversion() {
-      try {
-        gtag('event', 'conversion', { 'send_to': 'AW-169744/CONVERSION_LABEL_CALL' });
-      } catch(e) {}
+      try { gtag('event','conversion',{send_to:'AW-169744/CONVERSION_LABEL_CALL'}); } catch(e) {}
       return true;
     }
-
-    // Conversion "Formulaire"
     function gtag_report_form_conversion() {
-      try {
-        gtag('event', 'conversion', { 'send_to': 'AW-169744/CONVERSION_LABEL_FORM' });
-      } catch(e) {}
+      try { gtag('event','conversion',{send_to:'AW-169744/CONVERSION_LABEL_FORM'}); } catch(e) {}
       return true;
     }
   </script>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -44,95 +36,104 @@
         <span class="badge">Urgence 24/7</span>
         <span class="topbar__txt">Pyrénées-Orientales (66) • Déplacement rapide</span>
       </div>
+
       <a class="topbar__phone" href="tel:+33600000000" onclick="gtag_report_call_conversion()">
         📞 +33 6 00 00 00 00
       </a>
     </div>
   </div>
 
-  <!-- Hero -->
+  <!-- ENTÊTE (Hero) -->
   <header class="hero">
-    <div class="wrap hero__grid">
-      <div class="hero__content">
-        <h1>Plombier Urgence 66<br><span class="accent">Intervention rapide 24h/24 – 7j/7</span></h1>
-        <p class="hero__sub">
-          Fuite d’eau, WC bouché, débouchage, chauffe-eau…<br>
-          Intervention sur <strong>Perpignan</strong>, <strong>Canet</strong>, <strong>Argelès</strong>, <strong>Saint-Cyprien</strong> et tout le 66.
-        </p>
+    <div class="wrap hero__content">
+      <div class="kicker">Plombier urgence • 66</div>
 
-        <div class="hero__cta">
-          <a class="btn btn--call" href="tel:+33600000000" onclick="gtag_report_call_conversion()">
-            📞 Appeler maintenant
-          </a>
-          <a class="btn btn--quote" href="#devis">
-            📝 Devis immédiat
-          </a>
-        </div>
+      <h1>Plombier Urgence 66<br><span class="accent">Intervention rapide 24h/24 – 7j/7</span></h1>
 
-        <ul class="trust">
-          <li>✅ Devis clair</li>
-          <li>✅ Intervention rapide</li>
-          <li>✅ 24/7</li>
-        </ul>
+      <p class="hero__sub">
+        Fuite d’eau, WC bouché, débouchage, chauffe-eau…
+        Intervention sur <strong>Perpignan</strong>, <strong>Canet</strong>, <strong>Argelès</strong>,
+        <strong>Saint-Cyprien</strong> et tout le 66.
+      </p>
+
+      <div class="hero__cta">
+        <a class="btn btn--call" href="tel:+33600000000" onclick="gtag_report_call_conversion()">
+          📞 Appeler maintenant
+        </a>
+        <a class="btn btn--quote" href="#devis">
+          📝 Devis immédiat
+        </a>
       </div>
 
-      <!-- Form -->
-      <aside class="card" id="devis" aria-label="Formulaire de devis plomberie">
-        <h2>Rappel / Devis rapide</h2>
-        <p class="muted">Réponse rapide. Si urgence : <a href="tel:+33600000000" onclick="gtag_report_call_conversion()">appelez</a>.</p>
-
-        <form id="leadForm" class="form">
-          <label>
-            Nom
-            <input name="name" type="text" autocomplete="name" required placeholder="Votre nom" />
-          </label>
-
-          <label>
-            Téléphone
-            <input name="phone" type="tel" autocomplete="tel" required placeholder="06 12 34 56 78" />
-          </label>
-
-          <label>
-            Votre besoin
-            <textarea name="message" rows="4" required placeholder="Ex : fuite sous évier, WC bouché, débouchage..."></textarea>
-          </label>
-
-          <button class="btn btn--submit" type="submit">
-            Envoyer la demande
-          </button>
-
-          <p id="formStatus" class="status" role="status" aria-live="polite"></p>
-
-          <p class="fineprint">
-            En envoyant, vous acceptez d’être rappelé. Données utilisées uniquement pour vous recontacter.
-          </p>
-        </form>
-      </aside>
+      <ul class="trust">
+        <li>✅ Devis clair</li>
+        <li>✅ Intervention rapide</li>
+        <li>✅ 24/7</li>
+      </ul>
     </div>
   </header>
 
-  <!-- Mini sections (courtes) -->
+  <!-- BLOC “COMME SUR TA CAPTURE” ENTRE ENTÊTE ET FORMULAIRE -->
+  <section class="features" aria-label="Avantages">
+    <div class="wrap features__grid">
+      <div class="feature">
+        <div class="feature__icon" aria-hidden="true">🔧</div>
+        <div class="feature__title">Dépannage à partir de 45€</div>
+      </div>
+
+      <div class="feature">
+        <div class="feature__icon" aria-hidden="true">🏅</div>
+        <div class="feature__title">Artisan catalan – 30 ans d’expérience</div>
+      </div>
+
+      <div class="feature">
+        <div class="feature__icon" aria-hidden="true">💳</div>
+        <div class="feature__title">Payez seulement si c’est réparé</div>
+      </div>
+    </div>
+  </section>
+
   <main class="wrap">
-    <section class="mini">
-      <div class="mini__item">
-        <h3>🚨 Urgence fuite / dégât des eaux</h3>
-        <p>Diagnostic rapide + réparation. Intervention possible en soirée et week-end.</p>
-      </div>
-      <div class="mini__item">
-        <h3>🚽 WC / Évier bouché</h3>
-        <p>Débouchage, inspection, remise en service. Intervention propre.</p>
-      </div>
-      <div class="mini__item">
-        <h3>🔥 Chauffe-eau</h3>
-        <p>Panne, fuite, groupe de sécurité, remplacement selon besoin.</p>
-      </div>
+    <!-- FORMULAIRE -->
+    <section class="card" id="devis" aria-label="Formulaire de devis plomberie">
+      <h2>Rappel / Devis rapide</h2>
+      <p class="muted">
+        Réponse rapide. Si urgence : <a class="link" href="tel:+33600000000" onclick="gtag_report_call_conversion()">appelez maintenant</a>.
+      </p>
+
+      <form id="leadForm" class="form">
+        <label>
+          Nom
+          <input name="name" type="text" autocomplete="name" required placeholder="Votre nom" />
+        </label>
+
+        <label>
+          Téléphone
+          <input name="phone" type="tel" autocomplete="tel" required placeholder="06 12 34 56 78" />
+        </label>
+
+        <label>
+          Votre besoin
+          <textarea name="message" rows="4" required placeholder="Ex : fuite sous évier, WC bouché, débouchage..."></textarea>
+        </label>
+
+        <button class="btn btn--submit" type="submit">
+          Envoyer la demande
+        </button>
+
+        <p id="formStatus" class="status" role="status" aria-live="polite"></p>
+
+        <p class="fineprint">
+          En envoyant, vous acceptez d’être rappelé. Données utilisées uniquement pour vous recontacter.
+        </p>
+      </form>
     </section>
 
-    <!-- Avis tout en bas -->
+    <!-- Avis clients tout en bas -->
     <section class="reviews" id="avis">
       <div class="reviews__head">
         <h2>Avis clients</h2>
-        <p class="muted">Exemples d’avis (à personnaliser avec tes vrais retours).</p>
+        <p class="muted">Exemples d’avis (remplace par tes vrais avis).</p>
       </div>
 
       <div class="reviews__grid">
